--- a/css/styles.css
+++ b/css/styles.css
@@ -6,7 +6,7 @@
 
 body {
   background-color: #601d747a;
-  background-image: url(/img/tintarosa.png);
+  background-image: url(../img/tinta.png);
   background-position:top;
 }
 
